...
        android:layout_height="75dp"
        android:layout_below="@id/ethnicityTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="19dp"
        android:layout_toEndOf="@+id/viewRecipeButton"
        android:background="@color/colorPrimary"
        android:text="Return Home"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
...
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_below="@id/ethnicityTextView"
        android:layout_marginStart="14dp"
        android:layout_marginTop="133dp"
        android:background="@color/colorPrimary"
        android:text="View Recipe"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
...
