<resources>
    <string name="app_name">Are You Hungry</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorite</string>
    <string name="title_more">More</string>
    <string name="search_food">Search Food</string>
    <string name="random_pick">Random_Pick</string>
    <string name="pick_for_me">Pick For Me</string>
    <string name="all_foods">All Foods &amp; Recipes</string>
    <string name="title_activity_all_foods">AllFoodsActivity</string>
    <!--
...
    <string name="add_favourite">Add Favourite</string>
    <string name="search">Search!</string>
    <string name="add">ADD</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="add_a_new_food">Add a new food</string>
    <string name="switch_user">switch user</string>
    <string name="title_activity_add_food">Add Food</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

...
