...
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorites"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/title_more"/>

</menu>
